--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=booking-microservice
+spring.application.name=BOOKING-MICROSERVICE
 server.port=8082
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bookingdbnew?useSSL=false&serverTimezone=UTC
@@ -7,5 +7,28 @@ spring.datasource.password=De@763071
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+resilience4j.circuitbreaker.instances.flightServiceCB.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.flightServiceCB.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.flightServiceCB.minimumNumberOfCalls=3
+resilience4j.circuitbreaker.instances.flightServiceCB.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.flightServiceCB.waitDurationInOpenState=5s
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# RabbitMQ (booking service)
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=fms_user
+spring.rabbitmq.password=fms_password
+spring.rabbitmq.virtual-host=/fms
+
+
+#spring.cloud.config.uri=http://localhost:8888
+#spring.application.name=BOOKING-MICROSERVICE
+##spring.profiles.active=dev # Optional: specify a profile for environment-specific configs
+#spring.config.import=optional:configserver:http://localhost:8888
 
 
